<resources>
    <string name="app_name">房猫微店</string>
    <string name="action_settings">设置</string>

    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>

    <string name="desc">描述</string>

    <string name="main_tab1">首页</string>
    <string name="main_tab2">房源</string>
    <string name="main_tab3">客源</string>

    <string name="main_tab1_home_1">我的名片</string>
    <string name="main_tab1_home_2">我的房源</string>
    <string name="main_tab1_home_3">我的客户</string>
    <string name="main_tab1_home_4">我的考勤</string>
    <string name="main_tab1_home_5">我的单据</string>
    <string name="main_tab1_home_6">我的消息</string>
    <string name="main_tab1_home_7">个人设置</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>

    <string name="house_album_tab1">效果图</string>
    <string name="house_album_tab2">户型图</string>
    <string name="house_album_tab3">区位图</string>
    <string name="house_album_tab4">实景图</string>
    <string name="house_album_tab5">样板房</string>
    <string name="house_album_tab6">活动图</string>

    <string name="detail_house_selling_point">楼盘卖点：</string>
    <string name="detail_house_calculator">房贷计算器</string>

    <string name="detail_house_info">楼盘信息</string>
    <string name="detail_house_desc">楼盘描述</string>

    <string name="detail_house_info_1">户型：</string>
    <string name="detail_house_info_2">楼层：</string>
    <string name="detail_house_info_3">地址：</string>
    <string name="detail_house_info_4">面积：</string>
    <string name="detail_house_info_5">年代：</string>
    <string name="detail_house_info_6">朝向：</string>

    <string name="calculator_accu">公积金贷款</string>
    <string name="calculator_comm">商业贷款</string>
    <string name="calculator_comb">组合贷款</string>

    <string name="calculator_year">年（</string>
    <string name="calculator_period">）期</string>

    <string name="calculator_method_1">等额本息</string>
    <string name="calculator_method_2">等额本金</string>

    <string name="calculator_rate_type_1">首套房优惠(15%)利率</string>
    <string name="calculator_rate_type_2">基准利率</string>
    <string name="calculator_rate_type_3">第二套房上浮(10%)利率</string>

    <string name="calculator_label_wan_yuan">万元</string>

    <string name="calculator_rate_accu">公积金贷款利率</string>
    <string name="calculator_rate_comm">商业贷款利率</string>

    <string name="calculator_repay_method">还款方式：</string>
    <string name="calculator_total_amount">总贷款额：</string>
    <string name="calculator_total_years">按揭年数：</string>
    <string name="calculator_interest">利率：</string>
    <string name="calculator_amount_total">贷款金额：</string>
    <string name="calculator_amount_accu">公积金</string>
    <string name="calculator_amount_comm">商业性</string>

    <string name="calculator_start_compute">开  始  计  算</string>
    <string name="calculator_result_title">计算结果</string>

    <string name="calculator_result_total">贷款总额：</string>
    <string name="calculator_result_accu_rate">公积金贷款利率：</string>
    <string name="calculator_result_comm_rate">商业贷款利率：</string>
    <string name="calculator_result_repay_total">还款总额：</string>
    <string name="calculator_result_interest_pay">支付利息：</string>
    <string name="calculator_result_month_total">贷款月数：</string>
    <string name="calculator_result_first_month">首月还款：</string>
    <string name="calculator_result_last_month">末月还款：</string>
    <string name="calculator_result_average_month">月均还款：</string>
    <string name="calculator_result_comment">以上结果仅供参考</string>

    <string name="calculator_result_label_month">月</string>
    <string name="calculator_result_label_yuan">（元）</string>
    <string name="calculator_result_label_wan_yuan">（万元）</string>
</resources>
