<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.app.FragmentTabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/darkgrey"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/console_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_tab_height"
                android:layout_gravity="bottom"
                android:background="@color/grey"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="2.0dip"
                android:paddingTop="2.0dip">

                <com.ksls.funmall.view.MainTabRadioButton
                    android:id="@+id/main_tab1"
                    style="@style/main_tab_bottom"
                    android:drawableLeft="@drawable/main_tab1"
                    android:state_checked="true"
                    android:text="@string/main_tab1" />

                <ImageView
                    android:layout_width="1.0dip"
                    android:layout_height="match_parent"
                    android:src="@drawable/main_divider"
                    android:contentDescription="@string/desc" />

                <com.ksls.funmall.view.MainTabRadioButton
                    android:id="@+id/main_tab2"
                    style="@style/main_tab_bottom"
                    android:drawableLeft="@drawable/main_tab2"
                    android:text="@string/main_tab2" />

                <ImageView
                    android:layout_width="1.0dip"
                    android:layout_height="match_parent"
                    android:src="@drawable/main_divider"
                    android:contentDescription="@string/desc" />

                <com.ksls.funmall.view.MainTabRadioButton
                    android:id="@+id/main_tab3"
                    style="@style/main_tab_bottom"
                    android:drawableLeft="@drawable/main_tab3"
                    android:text="@string/main_tab3" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.app.FragmentTabHost>
